adding more nils

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 							<h2>Nils Langner</h2>
 							<p><a href="https://www.thewebhatesme.com/" title="The Web Hates Me">Blog</a></p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/kattau.jpg" class="image"><img src="images/thumbs/kattau.jpg" alt="" /></a>
+							<h2>Nils Kattau</h2>
+							<p><a href="https://nilskattau.de/" title="Nils Kattau">Blog</a></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/belde.jpg" class="image"><img src="images/thumbs/belde.jpg" alt="" /></a>
+							<h2>Nils Belde</h2>
+							<p><a href="http://www.belde.de/" title="Belde">Blog</a></p>
+						</article>
 
 					</div>
 
@@ -50,7 +60,7 @@
 							<div>
 								<section>
 									<h2>N I L S</h2>
-									<p>Die NILS Cloud ist ein Verbund von Menschen die Nils heissen.</p>
+									<p>Die NILS Cloud ist ein Verbund von Menschen die Nils heissen. Ist dass völlig irre? Ja! Weil wir Nils sind!</p>
 								</section>
 								<section>
 									<h2>Made by</h2>
