--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<p>Nerd, Maker, Vater von Sieben. <a href="https://www.silberkind.de/blog/ueber-mich/" title="Übermüdet">Blog</a></p>
 						</article>
 						<article class="thumb">
-							<a href="" class="image"><img src="images/thumbs/02.jpg" alt="The Web Hates me" /></a>
+							<a href="" class="image"><img src="images/thumbs/langner.jpg" alt="The Web Hates me" /></a>
 							<h2>Nils Langner</h2>
 							<p><a href="https://www.thewebhatesme.com/" title="The Web Hates Me">Blog</a></p>
 						</article>
