fixed error with nils image

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 						<article class="thumb">
 							<a href="images/fulls/hitze.jpg" class="image"><img src="images/thumbs/hitze.jpg" alt="" /></a>
 							<h2>Nils Hitze</h2>
-							<p>Nerd, Maker, Vater von Sieben. <a href="https://www.silberkind.de/blog/ueber-mich/" title="Übermüdet">Blog</a></p>
+							<p>Nerd, Maker, Vater von Sieben. Gründer der <a href="https://twitter.com/search?f=tweets&q=%23nilscloud" title="Twitter #nilscloud">#nilscloud</a>. <a href="https://www.silberkind.de/blog/ueber-mich/" title="Übermüdet">Blog</a></p>
 						</article>
 						<article class="thumb">
-							<a href="" class="image"><img src="images/thumbs/langner.jpg" alt="The Web Hates me" /></a>
+							<a href="images/fulls/langner.jpg" class="image"><img src="images/thumbs/langner.jpg" alt="The Web Hates me" /></a>
 							<h2>Nils Langner</h2>
 							<p><a href="https://www.thewebhatesme.com/" title="The Web Hates Me">Blog</a></p>
 						</article>
