--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 							<h2>Nils Belde</h2>
 							<p><a href="http://www.belde.de/" title="Belde">Blog</a></p>
 						</article>
-
+						<article class="thumb">
+							<a href="images/fulls/bokelberg.jpg" class="image"><img src="images/thumbs/bokelberg.jpg" alt="" /></a>
+							<h2>Nilz Bokelberg</h2>
+							<p><a href="http://www.qlod.org/weltfrieden/" title="Nilz Bokelberg">Blog</a></p>
+						</article>
 					</div>
 
 				<!-- Footer -->
