added Niels Doerje

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 							<h2>Nilz Bokelberg</h2>
 							<p><a href="http://www.qlod.org/weltfrieden/" title="Nilz Bokelberg">Blog</a></p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/doerje.jpg" class="image"><img src="images/thumbs/doerje.jpg" alt="" /></a>
+							<h2>Niels Doerje</h2>
+							<p><a href="https://plus.google.com/108373010835191221453" title="Niels Doerje">G+</a></p>
+						</article>
 					</div>
 
 				<!-- Footer -->
