--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
 							<h2>Niels Doerje</h2>
 							<p><a href="https://plus.google.com/108373010835191221453" title="Niels Doerje">G+</a></p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/juenemann.jpg" class="image"><img src="images/thumbs/juenemann.jpg" alt="" /></a>
+							<h2>Niels Doerje</h2>
+							<p><a href="https://twitter.com/totally_unknown" title="Nils Juenemann">G+</a></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/fallenbeck.jpg" class="image"><img src="images/thumbs/fallenbeck.jpg" alt="" /></a>
+							<h2>Niels Fallenbeck</h2>
+							<p><a href="http://www.fallenbeck.com/" title="Niels Fallenbeck">WWW</a></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/kuehn.jpg" class="image"><img src="images/thumbs/kuehn.jpg" alt="" /></a>
+							<h2>Nils Kühn</h2>
+							<p><a href="https://www.facebook.com/nils.kuhn.96" title="Nils Kühn">WWW</a></p>
+						</article>
 					</div>
 
 				<!-- Footer -->
